@@ -1,3 +1,8 @@
+2006-12-03  Thomas Schwinge  <tschwinge@gnu.org>
+
+	[bug #18015 --- ``GNU Mach: `make dist' and friends'']
+	* Makefile.am (DISTCLEANFILES): New variable.
+
 2006-11-30  Thomas Schwinge  <tschwinge@gnu.org>
 
 	* Makefile.in: Regenerate.
